# Assessment

cpp/: CMakeLists.txt  matrix.cpp  matrix.h
opencv/: CMakeLists.txt  main.cpp
